--- a/appointment_system/templates/admin_dashboard.html
+++ b/appointment_system/templates/admin_dashboard.html
@@ -4,7 +4,6 @@
 
 {% block content %}
 <style>
-
     section{
         margin: 0px 50px;
     }
@@ -25,6 +24,10 @@
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         gap: 1.5rem;
         margin-bottom: 2rem;
+    }
+
+    .card{
+        background-color: transparent;
     }
 
     .stat-card {
@@ -65,6 +68,8 @@
     .table-container {
         overflow-x: auto;
         margin-top: 1.5rem;
+        border: 2px solid #925429;
+        border-radius: 10px;
     }
 
     table {
